# TheraLoop

theraloop/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
theraloop/outputs/: best_prompt.txt  bug_fixes_report.md  crisis_detection_results.md  fourth_review_critical_bug.md  gepa_optimized_crisis_prompt.txt  mock_removal_summary.md  rate_limit_fix.md  third_review_bugs.md
theraloop/scripts/: CLAUDE.md  calibrate_confidence.py  deploy_gepa_production.sh  monitor_gepa_production.py  run_eval.py  run_gepa.py  run_review_dashboard.py  serve_demo.py
theraloop/theraloop/: CLAUDE.md  contracts.py
theraloop/theraloop/adapters/: together.py  together_hardened.py
theraloop/theraloop/auth/: jwt_auth.py
theraloop/theraloop/evals/: schema.py  scorer.py
theraloop/theraloop/metrics/: exact.py  grounding.py  logprob.py  util.py
theraloop/theraloop/monitor/: drift.py  mlflow_log.py
theraloop/theraloop/optim/: gepa_pipeline.py  gepa_pipeline_old.py  pareto.py
theraloop/theraloop/persistence/: __init__.py  database.py
theraloop/theraloop/policy/: matrix.yaml
theraloop/theraloop/safety/: granite_guardian.py  redact.py  redact_middleware.py
theraloop/theraloop/serving/: calibrate.py  calibrated_router.py  dspy_ensemble.py  dspy_intent_classification.py  dspy_therapy_responses.py  gepa_detection.py  human_review_dashboard.py  metrics_middleware.py  production_app.py  production_app_enhanced.py  production_app_secure.py  review_api.py  (+2 more)
theraloop/ui/: CLAUDE.md  package-lock.json  package.json  tsconfig.json
(+35 files in other folders)
